survey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey
  template:
    metadata:
      labels:
        app: survey
    spec:
      containers:
      - name: survey
        image: fugoku/survey
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: survey
spec:
  selector:
    app: survey
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: survey
spec:
  ingressClassName: nginx
  rules:
  - host: singh.richardokonicha.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: survey
            port:
              number: 3000
